Лого + кнопку назад убрал

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -905,13 +905,11 @@
                     <button class="toggle-sidebar-btn">
                         <i class="bi bi-list"></i>
                     </button>
-                    <a href="javascript:history.back()" class="back-btn">
-                        <i class="bi bi-arrow-left-circle"></i>
-                    </a>
                 {% endif %}
                 <a href="{{ url_for('routes.home') }}" class="logo">
-                    <i class="bi bi-journal-check"></i>
-                    <span>Система оценки</span>
+                    <img src="https://apply.tpu.ru/images/2022/footer-logo-ru.svg"
+                        style="height: 40px; filter: brightness(0) invert(1);">
+                    <span></span>
                 </a>
             </div>
 
